# buf-rand

./: Cargo.toml  README.md
examples/: inner_randomizer.rs  random_bool.rs  random_case.rs
src/: lib.rs
