[package]
name = "buf-rand"
version = "0.1.0"
authors = ["LordMZTE <lord@mzte.de>"]
edition = "2018"
description = "this crate contains a buffered randomizer for creating random booleans efficiently"
readme = "README.md"
repository = "https://github.com/lordmzte/buf-rand.git"
license = "GPL-3.0-or-later"
keywords = ["random", "boolean", "buffer", "rng"]
categories = ["caching"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
